# triMesh

./: .cproject  .gitignore  .project  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  build.sh
stlReader/: CMakeLists.txt
stlReader/include/: readStl.h  readWriteStl.h
stlReader/src/: readStl.cpp  readWriteStl.cpp
test_data/: Spinnaker Slots 5 - Coarse.stl
tests/: CMakeLists.txt
tests/include/: testUtil.h  tests.h
tests/src/: enerMeshTest.cxx  testBoundingBox.cpp  testBoundingBox2D.cpp  testMath.cpp  testMesh.cpp  testVector2.cpp  testVector3.cpp  tests.cpp  triMeshTest.cxx
triMesh/: CMakeLists.txt
triMesh/include/: boundingBox.h  defines.h  edge.h  em_math.h  polyLine.h  spatialSearch.h  spatialSearch.hpp  tm_bestFit.h  tm_boundingBox.h  tm_boundingBox2D.h  tm_codeTemplates.h  tm_defaultTolerances.h  tm_defines.h  tm_edge.h  tm_fixedMath.h  tm_ioUtil.h  tm_iterator.h  tm_iterator.hpp  tm_lineSegment.h  tm_lineSegment.hpp  tm_lineSegment2D.h  tm_lineSegment2D.hpp  tm_lineSegment2D_byref.h  tm_lineSegment2D_byref.hpp  tm_lineSegment_byref.h  tm_lineSegment_byref.hpp  tm_math.h  tm_math.hpp  tm_math_transforms.h  tm_plane.h  tm_plane_byref.h  tm_polyLine.h  tm_proxyEdges.h  tm_proxyTriangles.h  tm_proxyVector.h  tm_proxyVector.hpp  tm_proxyVertices.h  tm_ray.h  tm_rectangle.h  tm_repo.h  (+15 more)
triMesh/src/: em_math.cpp  mainTest.cpp  polyLine.cpp  tm_boundingBox.cpp  tm_boundingBox2D.cpp  tm_defaultTolerances.cpp  tm_edge.cpp  tm_fixedMath.cpp  tm_ioUtil.cpp  tm_lineSegment.cpp  tm_lineSegment2D.cpp  tm_math.cpp  tm_plane.cpp  tm_plane_byref.cpp  tm_polyLine.cpp  tm_proxyEdges.cpp  tm_proxyTriangles.cpp  tm_proxyVertices.cpp  tm_repo.cpp  tm_spatialSearch.cpp  tm_vector2.cpp  tm_vector3.cpp  tm_vertex.cpp  triMesh.cpp  triMeshPatch.cpp  vector3.cpp  vertex.cpp
x64/Debug/: stlReader.lib
x64/Release/: stlReader.lib  triMesh.lib  triMeshTest.lib
